<resources>
    <string name="prefs_file">com.example.testfarma_app.PREFERENCE_FILE_KEY</string>
    <string name="app_name">TestFarma</string>
    <string name="slogan">Bienvenido a TestFarma</string>
    <string name="menu">menu</string>
    <string name="logo">logo</string>
    <string name="carrito">carrito</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="o">Ó</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="Logout">Salir</string>
    <string name="continuar_como_invitado">Continuar como invitado</string>
    <string name="perfil">perfil</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="back">Regresar</string>
    <string name="crea_tu_cuenta">¡Crea tu cuenta!</string>
    <string name="ingresa_t_correo_e">Ingresa tu Correo E</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="ingresa_t_n_mero_cel">Ingresa tu número cel</string>
    <string name="crea_tu_contrase_a">Crea tu contraseña</string>
    <string name="ingresa_t_correo_el">Ingresa tu correo electrónico</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="terms">Al hacer click en REGISTARSE aceptas la política de privacidad</string>
    <string name="promociones">Promociones</string>
    <string name="resultados">Resultados</string>
    <string name="id_usr">"ID: "</string>
    <string name="nom_arch">nombre archivo</string>
    <string name="hist_res_usr">"Historial"</string>
    <string name="descarga">Descarga</string>
    <string name="todo">TODO</string>
    <string name="ver_descarga">Ver Descarga</string>
    <string name="todoview">TODO</string>
    <string name="descarga_pdf">descarga_pdf</string>
    <string name="pdf_show">pdf_show</string>
    <string name="facturas_generadas">Facturas Generadas</string>
    <string name="sucursal_pop">Conoce nuestros horarios</string>
    <string name="guardar">Guardar</string>
    <string name="sus_datos_estan_protegidos_con_su_usuario_y_solo_ser_n_usados_para_generar_su_cita">Sus datos estan protegidos con su usuario y solo serán usados para generar su cita</string>
    <string name="selecciona_la_hora">Selecciona la hora</string>
    <string name="selecciona_el_estudio">Selecciona el estudio</string>
    <string name="selecciona_la_sucursal">Selecciona la sucursal</string>
    <string name="genera_tu_cita">Genera tu cita</string>
    <string name="user_cita">Citas</string>
    <string name="estudios">Estudios Disponibles</string>
    <string name="nom_paciente">Nombre del paciente</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vivamus_at_risus_varius_egestas_magna_vel_pretium_diam_phasellus_accumsan_tortor_at_consectetur_congue_elit_ipsum_tempus_sem_vitae_pulvinar_orci_nibh_condimentum_nisl_donec_volutpat_at_massa_et_ultricies_proin_viverra_felis_nulla_et_finibus_augue_tincidunt_non_morbi_maximus_velit_rutrum_eros_ultrices_rhoncus_curabitur_libero_magna_tincidunt_sit_amet_varius_nec_aliquam_nec_erat_phasellus_ultrices_metus_nibh_et_congue_est_lobortis_tincidunt_nam_a_mollis_sem_mauris_lobortis_justo_ut_sapien_interdum_a_fermentum_nisl_maximus_in_et_efficitur_arcu_sed_viverra_neque_proin_interdum_ornare_euismod_phasellus_accumsan_orci_nec_ligula_hendrerit_placerat_donec_id_congue_massa_in_vulputate_mi_a_arcu_dictum_vel_congue_massa_scelerisque">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at risus varius, egestas magna vel, pretium diam. Phasellus accumsan, tortor at consectetur congue, elit ipsum tempus sem, vitae pulvinar orci nibh condimentum nisl. Donec volutpat at massa et ultricies. Proin viverra felis nulla, et finibus augue tincidunt non. Morbi maximus velit rutrum eros ultrices rhoncus. Curabitur libero magna, tincidunt sit amet varius nec, aliquam nec erat. Phasellus ultrices metus nibh, et congue est lobortis tincidunt. Nam a mollis sem. Mauris lobortis justo ut sapien interdum, a fermentum nisl maximus. In et efficitur arcu, sed viverra neque. Proin interdum ornare euismod. Phasellus accumsan orci nec ligula hendrerit placerat. Donec id congue massa. In vulputate mi a arcu dictum, vel congue massa scelerisque.</string>
    <string name="acerca_de_nosotros">Acerca De Nosotros</string>
    <string name="ingrese_su_rfc">Ingrese su RFC</string>
    <string name="ingrese_su_codigo_postal">Ingrese su codigo postal</string>
    <string name="ingrese_su_estado">Ingrese su Estado</string>
    <string name="ingrese_su_colonia">Ingrese su colonia</string>
    <string name="ingrese_el_numero">Ingrese el numero</string>
    <string name="ingrese_su_calle">Ingrese su calle</string>

    <!-- Create string for account provider authority -->
    <string name="provider">Proveedor</string>
    <!--Dropdown_sucursal-->
    <string-array name="sucursal_ar">
        <item>Sucursal A</item>
        <item>Sucursal B</item>
        <item>Sucursal C</item>
        <item>Domicilio</item>
    </string-array>

    <!--Dropdown_hora-->
    <string-array name="time_ar">
        <item>8:00</item>
        <item>8:10</item>
        <item>8:20</item>
        <item>8:30</item>
        <item>8:40</item>
        <item>8:50</item>
        <item>9:00</item>
        <item>9:10</item>
        <item>9:20</item>
        <item>9:30</item>
        <item>9:40</item>
        <item>9:50</item>
        <item>10:00</item>
        <item>10:10</item>
        <item>10:20</item>
        <item>10:30</item>
        <item>10:40</item>
        <item>10:50</item>
        <item>11:00</item>
    </string-array>

    <string-array name="estudio_ar">
        <item>Estudio A</item>
        <item>Estudio B</item>
        <item>Estudio C</item>
        <item>Estudio D</item>
        <item>Estudio E</item>
        <item>Estudio F</item>
    </string-array>

    <!--Facturas-->
    <string name="fact">Facturacion</string>
    <string name="nombrefact">Nombre o Razón social</string>
    <string name="RFC">RFC</string>
    <string name="RF">Regimen Fiscal</string>
    <string name="correo_fact">Correo</string>
    <string name="CP">Codigo Postal</string>
    <string name="Send">Generar</string>
    <string name="guardar_cita">Guardar</string>
    <string name="contacto">CONTACTO</string>
    <string name="telefono">Teléfono: 55 7081 7720</string>
    <string name="google_login">Iniciar Sesión con Google</string>
    <string name="googleimg">googleimg</string>
    <string name="userpicture">UserPicture</string>
    <string name="completar_registro">Complete su registro para acceder a más opciones de la aplicación:</string>
    <string name="estado">Estado</string>
    <string name="colonia">Colonia</string>
    <string name="numero">Numero</string>
    <string name="calle">Calle</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="userimg">UserImg</string>
    <string name="texto1Hist">texto1Hist</string>
    <string name="historia">historia</string>
    <string name="texto2Hist">texto2Hist</string>
    <string name="acerca">acerca</string>
    <string name="text1Ace">Testfarma nace para cubrir la necesidad de ir más allá en la venta y distribución de insumos médicos y pruebas de diagnóstico clínico, así como de productos farmacéuticos.</string>
    <string name="charac">Un caracter especial | Una letra mayúscula | Una letra minúscula | Sin espacios en blanco | 4 caracteres mínimo</string>
    =======
    <string name="ingrese_su_telefono">Ingrese su telefono</string>
    <string name="ingrese_su_fecha_de_nacimiento">Ingrese su fecha de nacimiento</string>
    <string name="ingrese_su_estatura">Ingrese su estatura</string>
    <string name="ingrese_su_peso">Ingrese su peso</string>
    <string name="peso">Peso: X.XX kg</string>
    <string name="estatura">Estatura: X.XX m</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento: AAAA/MM/DD</string>
    <string name="contrase_a">Contraseña</string>
    >>>>>>> Stashed changes

    <string-array name="Regimen">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
    </string-array>


</resources>
